tests/ui/parser/issues/issue-76437-const-async-unsafe.stderr
error: expected one of `extern` or `fn`, found keyword `pub`
  --> $DIR/issue-76437-const-async-unsafe.rs:4:24
   |
LL |     const async unsafe pub fn t() {}
   |     -------------------^^^
   |     |                  |
   |     |                  expected one of `extern` or `fn`
   |     help: visibility `pub` must come before `const async unsafe`: `pub const async unsafe`

error: aborting due to previous error

